--- a/index.html
+++ b/index.html
@@ -867,7 +867,7 @@
             <div class="contact_title"><div class="contact_text">Contact</div><div class="contact_title_underline"></div></div>
          <div class="contact_content">
             <div class="contact_wrapper_left">
-                <p class="p1">BirtDay: <span>03/11/2001</span></p>
+                <p class="p1">BirthDay: <span>03/11/2001</span></p>
                 <p class="p2">Address <span>Tư Nghĩa, Quảng Ngãi</span></p>
                 <p class="p3">Phone: <span>0932202921</span></p>
                 <p class="p4">Email: <span>Duyvanlee2001@gmail.com</span></p>
@@ -879,7 +879,7 @@
                         <input type="text" placeholder="Name">
                     </div>
                     <div class="input">
-                        <textarea name="" id="" cols="30" rows="10">Message</textarea>
+                        <textarea name="" id="" cols="30" rows="10"> Message</textarea>
                     </div>
                     <div class="btn"><button type="submit">Send</button></div>
                 </form>
